// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BatchProgressRow > renders correctly if progressType is bar 1`] = `
<div
  class="d-flex align-center full-width"
>
  
  <div
    class="d-flex align-center mr-1"
    style="order: 1;"
  >
    <!--v-if-->
    <div>
      <span
        class="text-no-wrap text-primary"
      >
        90
      </span>
      <span
        class="text-no-wrap text-lw-orange ml-1"
      >
        (10)
      </span>
    </div>
  </div>
  <div
    class="d-flex align-center text-no-wrap text-truncate"
    style="order: 3;"
  >
    <span>
      /
    </span>
    <span
      class="text-truncate ml-1"
    >
      150 primaryUnit
    </span>
  </div>
  <v-progress-linear-stub
    absolute="false"
    active="true"
    bgcolor="lw-gray"
    bgopacity="1"
    buffervalue="0"
    chunkgap="4"
    class="mr-1"
    clickable="false"
    color="primary"
    height="6"
    indeterminate="false"
    location="top"
    max="100"
    modelvalue="60"
    reverse="false"
    rounded="true"
    roundedbar="false"
    stream="false"
    striped="false"
    style="order: 2; flex: 1 1 0%;"
    tag="div"
    tile="false"
  />
  
</div>
`;

exports[`BatchProgressRow > renders correctly if progressType is circle 1`] = `
<div
  class="d-flex align-center full-width"
>
  
  <div
    class="d-flex align-center mr-1"
    style="order: 1;"
  >
    <v-progress-circular-stub
      class="mr-1 my-auto"
      color="primary"
      indeterminate="false"
      modelvalue="60"
      reveal="false"
      rotate="0"
      rounded="false"
      size="12"
      tag="div"
      width="2"
    />
    <div>
      <span
        class="text-no-wrap text-primary"
      >
        90
      </span>
      <span
        class="text-no-wrap text-lw-orange ml-1"
      >
        (10)
      </span>
    </div>
  </div>
  <div
    class="d-flex align-center text-no-wrap text-truncate"
    style="order: 3;"
  >
    <span>
      /
    </span>
    <span
      class="text-truncate ml-1"
    >
      150 primaryUnit
    </span>
  </div>
  <!--v-if-->
  
</div>
`;

exports[`BatchProgressRow > renders correctly when plannedQty is 0 1`] = `
<div
  class="d-flex align-center full-width"
>
  <header-label-value-row-stub
    label="quantity"
    labelclass=""
    large="false"
    value=""
    valueclass=""
  >
    <span
      class="text-no-wrap text-primary"
    >
      90
    </span>
    <span
      class="text-no-wrap text-lw-orange ml-1"
    >
      (10)
    </span>
    <span
      class="text-no-wrap ml-1"
    >
      primaryUnit
    </span>
  </header-label-value-row-stub>
</div>
`;
